# movie-recommender

./: .env.example  .gitignore  .isort.cfg  .mypy.ini  README.md  docker-compose.development.yml  pyproject.toml
docker/development/django/: Dockerfile  entrypoint.sh  start.sh
docker/development/django/celery/beat/: start.sh
docker/development/django/celery/worker/: start.sh
docker/development/django/jupyter/: start.sh
requirements/: base.txt  development.txt
src/auth/: admin.py  apps.py
src/auth/management/commands/: fake.py
src/auth/migrations/: 0001_initial.py  0002_alter_user_id.py
src/auth/tests/: factories.py
src/config/: celery.py  settings.py  urls.py
src/dashboard/: views.py
src/dashboard/templates/dashboard/: index.html
src/exports/: admin.py  models.py  utils.py
src/exports/migrations/: 0001_initial.py  0002_export_content_type.py  0003_export_latest.py
src/movies/: admin.py  apps.py  managers.py  models.py  querysets.py  signals.py  tasks.py  urls.py  views.py
src/movies/management/commands/: createmoviesuggestions.py  exportdatasets.py  trainsurprisemodel.py  updatemovieratings.py  updateratings.py
src/movies/migrations/: 0001_initial.py  0002_movie_rating_average_movie_rating_count_and_more.py  0002_movie_score.py  0003_movie_index.py  0003_rename_rating_average_movie_ratings_average_and_more.py  0004_movie_source_id.py
src/movies/services/: ml.py
src/movies/services/tmdb/: __init__.py  clients.py  errors.py  schemas.py
src/movies/templates/movies/: movie_detail.html  movie_infinite.html  movie_list.html
src/movies/tests/: conftest.py  factories.py  test_models.py
src/notebooks/: load_movie_ratings_dataset.ipynb  load_movies_dataset.ipynb  movies_dataframe_test.ipynb  setup_django.py  update_ratings_movie_ids.ipynb
src/ratings/: admin.py  apps.py  context_processors.py  managers.py  mixins.py  models.py  querysets.py  signals.py  tasks.py  urls.py  views.py
src/ratings/management/commands/: createfakeratings.py  generate.py
src/ratings/migrations/: 0001_initial.py  0002_alter_rating_value.py  0002_initial.py
src/ratings/templatetags/: get_dict_val.py
src/ratings/tests/: factories.py
src/suggestions/: admin.py  managers.py  models.py
src/suggestions/migrations/: 0001_initial.py  0002_suggestion_active.py
src/templates/: home.html  index.html
src/templates/account/: logout.html
src/templates/partials/: head.html  messages.html  navbar.html  scripts.html
src/users/: admin.py  managers.py  models.py
src/users/management/commands/: createfakeusers.py
src/users/migrations/: 0001_initial.py  0002_alter_user_managers.py
src/users/tests/: factories.py
(+9 files in other folders)
