[project]
name = "movie-recommender"
version = "0.1.0"
description = "Web application that recommends movies to users based on their preferences using collaborative filtering."
authors = [
    { name = "William Fernandes", email = "william.winchester1967@gmail.com" },
]
dependencies = [
    "Django==4.2.*",
    "Celery==5.3.*",
    "django-allauth==0.61.*",
    "django-celery-beat==2.5.*",
    "django-celery-results==2.5.*",
    "django-htmx==1.17.*",
    "python-decouple==3.8",
    "redis==5.0.*",
    "numpy==1.26.*",
    "scikit-surprise==1.1.3",
    "dj_database_url==2.1.0",
    "psycopg[binary]==3.1.*",
]
optional-dependencies = { "dev" = [
    "black==24.2.*",
    "isort==5.8.0",
    "flake8==3.9.2",
    "flake8-docstrings==1.6.0",
    "mypy==0.900",
    "pytest==7.0.0",
    "pytest-cov==2.12.0",
    "Faker==23.2.1",
] }
requires-python = "==3.11.*"
readme = "README.md"

[tool.black]
line-length = 88
skip-string-normalization = false
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
